syntax = "proto3";

package chaintools.tools;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "chaintools/tools/params.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "chainTools/x/tools/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/chainTools/tools/params";
  
  }
  
  // Queries a list of TotalWallet items.
  rpc TotalWallet (QueryTotalWalletRequest) returns (QueryTotalWalletResponse) {
    option (google.api.http).get = "/chainTools/tools/total_wallet/{address}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryTotalWalletRequest {
  string address = 1;
}

message QueryTotalWalletResponse {
  repeated cosmos.base.v1beta1.Coin bank      = 1 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin unbond    = 2 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin delegated = 3 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin rewards   = 4 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin total     = 5 [(gogoproto.nullable) = false];
}

